--- a/StormWeb/Views/Document/StudentDetails.cshtml
+++ b/StormWeb/Views/Document/StudentDetails.cshtml
@@ -168,9 +168,9 @@
 
 <div class="row-fluid">
     <div class="span12">        
-        <div class="nonboxy-widget">
-          <div class="widget-head">
-            <h5><i class="black-icons  user"></i> Applications Of : @ViewBag.studentName @Html.ActionLink("Contact details", "StudentProfile", "StudentCentre", new { id = ViewBag.clientId }, new { @class="ifName" })</h5>
+        <div class="box-tab">
+          <div class="page-header">
+            <h1>&nbsp; Applications Of : @ViewBag.studentName <small>@Html.ActionLink(">>Contact details", "StudentProfile", "StudentCentre", new { id = ViewBag.clientId }, new { @class="ifName" })</small></h1> 
           </div>
           <div class="widget-content">
             <div class="widget-box">
@@ -579,9 +579,9 @@
 
 <div class="row-fluid">
     <div class="span12">        
-        <div class="nonboxy-widget">
-          <div class="widget-head">
-            <h5>General Documents</h5>
+        <div class="box-tab">
+          <div class="page-header">
+            <h1>&nbsp; &nbsp; General Documents</h1>
           </div>
  
                   <div class="widget-content">
