--- a/StormWeb/Views/Staff/Create.cshtml
+++ b/StormWeb/Views/Staff/Create.cshtml
@@ -368,7 +368,8 @@
             changeMonth: true,
             changeYear: true,
             minDate: '-100Y',
-            maxDate: '0'
+            maxDate: '0',            
+            yearRange:"-70:+0",
         });
     });
     $(document).ready(function () {
@@ -376,8 +377,8 @@
             dateFormat: 'mm/dd/yy',
             changeMonth: true,
             changeYear: true,
-            minDate: '-100Y',
-            maxDate: '+10Y'
+            minDate: '-20',
+            maxDate: '+10Y',
         });
     });
 
