--- a/StormWeb/Views/StudentCentre/CounsellorDetails.cshtml
+++ b/StormWeb/Views/StudentCentre/CounsellorDetails.cshtml
@@ -1,11 +1,9 @@
 ﻿@model  StormWeb.Models.StudentCentreModel
             
-             
-<div class="span3">
-    <div class="widget-block">
-        <div class="widget-head">
-            <h5>
-                Status</h5>
+    <div class="box-tab">
+        <div class="page-header">
+            <h1>
+                &nbsp; &nbsp;Status</h1>
         </div>
         <div class="widget-content">
             <div class="widget-box">
@@ -67,4 +65,3 @@
             </div>
         </div>
     </div>
-</div>
