--- a/StormWeb/Content/css/bootstrap.css
+++ b/StormWeb/Content/css/bootstrap.css
@@ -23,6 +23,7 @@ html {
 	font-size: 100%;
 	-webkit-text-size-adjust: 100%;
 	-ms-text-size-adjust: 100%;
+	min-height: 100%;
 }
 a:focus {
 	outline: thin dotted #333;
@@ -121,7 +122,8 @@ body {
 	font-size: 12px;
 	line-height: 18px;
 	color: #333333;
-	background: url(../img/pattern.png);
+	background: url(../img/edu_aus-green.png) repeat-x bottom left, url(../img/pattern-green.png);
+	height: 100%;
 }
 a {
 	color: #0088cc;
@@ -383,9 +385,10 @@ h6 {
 	text-transform: uppercase;
 }
 .page-header {
-	padding-bottom: 17px;
-	margin: 18px 0;
+	/*padding-bottom: 17px;*/
+	padding: 18px 0;
 	border-bottom: 1px solid #ccc;
+	background-image: url(../img/tiny_grid.png);
 }
 .page-header h1 {
 	line-height: 1;
