--- a/StormWeb/Content/css/my_custom.css
+++ b/StormWeb/Content/css/my_custom.css
@@ -1,4 +1,5 @@
-﻿.logo img
+﻿/** General **/
+.logo img
 {
     width: 100px;
     height: 40px;
@@ -7,6 +8,18 @@
     -moz-transition: all 0.3s ease-out;
     -o-transition: all 0.3s ease-out;
 }
+
+.page-header h1
+{
+    padding-left: 10px;
+}
+
+.content-area
+{
+    padding: 20px;
+}
+
+/** End of General **/
 
 
 #notificationCenterBox
@@ -378,3 +391,4 @@ a.tab-background-orange
 {
     padding-right: 20px;
 }
+
