--- a/StormWeb/Views/Account/ChangePasswordSuccess.cshtml
+++ b/StormWeb/Views/Account/ChangePasswordSuccess.cshtml
@@ -1,8 +1,16 @@
 ﻿@{
     ViewBag.Title = "Change Password";
 }
+<div class="box-tab">
+    <div class="page-header">
+        <h1>Change Password</h1>
+    </div>
+    <div class="widget-content">
+        <div class="content-area">
+            <p class="alert alert-success">
+                Your password has been changed successfully.
+            </p>
+        </div>
+    </div>
+</div>
 
-<h2>Change Password</h2>
-<p>
-    Your password has been changed successfully.
-</p>
