--- a/StormWeb/Views/Advertisement/Delete.cshtml
+++ b/StormWeb/Views/Advertisement/Delete.cshtml
@@ -1,29 +1,35 @@
-﻿@model StormWeb.Models.Advertisement
+﻿@model StormWeb.Models.AdvertisementViewModel
 
 @{
     ViewBag.Title = "Delete";
 }
 
+<div class="row-fluid">
+    <div class="span12">
+        <div class="box-tab">
+            <div class="page-header">
+            <h1> &nbsp;&nbsp;Delete Material </h1>
+            </div>
+            <div class="widget-content">
+                <div class="widget-box" style="padding: 15px;">
 
-<div class="span6">
-    <h2>
-        Delete</h2>
-    <h3>
-        Are you sure you want to delete this?</h3>
+           <h3> Are you sure you want to delete this?</h3>
+   @using (Html.BeginForm())
+   {
     <table class="data-tbl-simple table table-bordered dataTable ">
         <tr>
             <th>
                 Heading
             </th>
             <td>
-                @Html.DisplayFor(model => model.Heading)
+                @Html.DisplayFor(model => model.adv.Heading)
             </td>
         </tr>
         <tr>
             <th>
                 Author
             </th>
-            <td>@Html.DisplayFor(model => model.UploadedBy)
+            <td>@Html.DisplayFor(model => model.adv_file.UploadedBy)
             </td>
         </tr>
         <tr>
@@ -31,7 +37,7 @@
                 Updated Date
             </th>
             <td>
-                @Html.DisplayFor(model => model.UploadedOn)
+                @Html.DisplayFor(model => model.adv_file.UploadedOn)
             </td>
         </tr>
         <tr>
@@ -39,14 +45,21 @@
                 Comments
             </th>
             <td>
-                @Html.DisplayFor(model => model.Comments)
+                @Html.DisplayFor(model => model.adv.Comments)
             </td>
         </tr>
     </table>
 <p>
         <input type="submit" value="Delete" class="btn btn-danger" /> 
-       @Html.Button_DeleteOrCancel("Cancel", "../../Advertisement/List")
+    
 </p>
+   }
 
 </div>
+</div>
+</div>
+</div>
+</div>
+       
+       
 
