--- a/StormWeb/Views/Advertisement/Edit.cshtml
+++ b/StormWeb/Views/Advertisement/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model StormWeb.Models.Advertisement
+﻿@model StormWeb.Models.AdvertisementViewModel
 
 @{
     ViewBag.Title = "Edit";
@@ -21,31 +21,45 @@
 
     });  </script>
 
-<h2>Edit</h2>
 
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
-
+<div class="row-fluid">
+    <div class="span12">
+        <div class="box-tab">
+            <div class="page-header">
+            <h1> &nbsp;&nbsp;Edit Advertisement </h1>
+            </div>
+            <div class="widget-content">
+                <div class="widget-box" style="padding: 15px;">
 @using (Html.BeginForm()) {
+    @Html.ValidationSummary()
     @Html.ValidationSummary(true)
     <fieldset>
-        <legend>Advertisement</legend>
-
-        @Html.HiddenFor(model => model.AdvertisementId)
+              @Html.HiddenFor(model => model.adv.AdvertisementId)
 
          <div class="editor-label">
             @Html.Label("Heading")
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.Heading)
-            @Html.ValidationMessageFor(model => model.Heading)
+            @Html.EditorFor(model => model.adv.Heading)
+            @Html.ValidationMessageFor(model => model.adv.Heading)
         </div>
+
+         <div class="editor-label">
+            @Html.Label("Comments")
+        </div>
+       <div class="editor-field">
+           @Html.TextAreaFor(model => model.adv.Comments, new { @class = "span11", rows = "8", cols = "8", id = "inbox-editor" })
+            @Html.ValidationMessageFor(model => model.adv.Comments)
+        </div>
+
         <div class="editor-label">
             @Html.Label("Author")
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.UploadedBy)
-            @Html.ValidationMessageFor(model => model.UploadedBy)
+            @Html.TextBoxFor(model => model.adv_file.UploadedBy, new { @readonly = "readonly" })
+            @Html.ValidationMessageFor(model => model.adv_file.UploadedBy)
         </div>
 
         <div class="editor-label">
@@ -53,20 +67,18 @@
         </div>
         <div class="editor-field">
             <div class="input-append">
-            @Html.TextBoxFor(model => model.UploadedOn, new { @readonly = "readonly", @class = "dp1" })  
-            @*@Html.EditorFor(model => model.UploadedOn)*@
-            @Html.ValidationMessageFor(model => model.UploadedOn)
+            @Html.TextBoxFor(model => model.adv_file.UploadedOn, new { @readonly = "readonly"})  
+            @Html.ValidationMessageFor(model => model.adv_file.UploadedOn)
         </div>
         </div>
-
-       @* <div class="editor-label">
+       @*<div class="editor-label">
             @Html.Label("Advertisement")
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.Advertisement1)
-            @Html.ValidationMessageFor(model => model.Advertisement1)
+            @Html.TextBoxFor(model => model.adv_file.FileName, new { @readonly = "readonly"})
+            @Html.ValidationMessageFor(model => model.adv_file.FileName)
         </div>*@
-
+    
         <p>
             <input type="submit" value="Save" />
         </p>
@@ -75,4 +87,9 @@
 
 <div>
     @Html.ActionLink("Back to List", "Index")
+</div>
+</div>
+</div>
+</div>
+</div>
 </div>
