--- a/StormWeb/Views/Application/Index.cshtml
+++ b/StormWeb/Views/Application/Index.cshtml
@@ -103,10 +103,10 @@ $(function () {
 </style>
 <div class="row-fluid">
     <div class="span12">
-          <div class="widget-block">
-            <div class="widget-head">
-                <h5>
-                    <i class="black-icons  documents"></i>Application Summary</h5>
+          <div class="box-tab">
+            <div class="page-header">
+                <h1>
+                    &nbsp; &nbsp; Application Summary</h1>
             </div>
             <div class="widget-content">
                <div class="widget-box" style="padding: 15px;"> 
