--- a/StormWeb/Views/StaffCentre/Index.cshtml
+++ b/StormWeb/Views/StaffCentre/Index.cshtml
@@ -30,10 +30,10 @@ $(function () {
 
 <div class="row-fluid">
     <div class="span9">
-        <div class="widget-block">
-            <div class="widget-head">
-                <h5>
-                    My dashboard</h5>
+        <div class="box-tab">
+            <div class="page-header">
+                <h1>
+                    &nbsp; &nbsp; My dashboard</h1>
             </div>
             <div class="widget-content">
                 <div class="widget-box">
@@ -130,6 +130,8 @@ $(function () {
         </div>
     </div>
 </div>
+@if(CookieHelper.isInRole("Counsellor"))
+    {
 <div class="row-fluid">
     <div class="span12">        
         <div class="nonboxy-widget">
@@ -204,7 +206,7 @@ $(function () {
                                     </td>
                                     <td>
                                         <ul>
-                                            <li><a href=@Url.Action("Index", "Application", new { id= item.Student_Id })><i class="color-icons application_detail_co"></i>Goto application</a></li>
+                                            <li><a href=@Url.Action("StudentDetails", "Document", new { id= item.Student.Client_Id })><i class="color-icons application_detail_co"></i>Goto application</a></li>
                                             <li><a class="iframe" href=@Url.Action("CheckAppointment", "Appointment", new { id = item.Student_Id })><i class="color-icons calendar_1_co"></i>Check appointment</a></li>                                            
                                         </ul>
                                     </td>                                    
@@ -218,3 +220,79 @@ $(function () {
         </div>
     </div>                
 </div>
+}
+            <div class="row-fluid">
+<div class="box-tab span9">
+    <div class="page-header">
+        <h1>
+            Quick chart</h1>
+    </div>
+    <div class="widget-content">
+        <div class="content-area">
+
+                <div class="graph-placeholder" style="min-height: 400px;">
+
+            </div>
+        </div>
+    </div>
+</div>
+                </div>
+
+<script src="../../Scripts/jquery.flot.js" type="text/javascript"></script>
+
+<script>
+
+    $(function () {
+        var sin = [], cos = [];
+
+
+        for (var i = 0; i < 14; i += 0.5) {
+            sin.push(i+1);
+            cos.push(i*2);
+        }
+
+        var plot = $.plot($(".graph-placeholder"),
+           [{ data: sin, label: "New Applications" }, { data: cos, label: "new Students"}], {
+               series: {
+                   lines: { show: true },
+                   points: { show: true }
+               },
+               grid: { hoverable: true, clickable: true },
+               yaxis: { min: -50, max: 50 }
+           });
+
+        function showTooltip(x, y, contents) {
+            $('<div id="tooltip">' + contents + '</div>').css({
+                position: 'absolute',
+                display: 'none',
+                top: y + 5,
+                left: x + 5,
+                border: '1px solid #fdd',
+                padding: '2px',
+                'background-color': '#fee',
+                opacity: 0.80
+            }).appendTo("body").fadeIn(200);
+        }
+
+        var previousPoint = null;
+        $(".graph-placeholder").bind("plothover", function (event, pos, item) {
+
+            if (item) {
+                if (previousPoint != item.dataIndex) {
+                    previousPoint = item.dataIndex;
+
+                    $("#tooltip").remove();
+                    var x = item.datapoint[0].toFixed(2),
+                        y = item.datapoint[1].toFixed(2);
+
+                    showTooltip(item.pageX, item.pageY,
+                                item.series.label + " of " + x + " = " + y);
+                }
+            }
+            else {
+                $("#tooltip").remove();
+                previousPoint = null;
+            }
+        });
+    });
+</script>
