--- a/StormWeb/Views/StudentCentre/Student.cshtml
+++ b/StormWeb/Views/StudentCentre/Student.cshtml
@@ -31,12 +31,12 @@
 </script>
 <div class="row-fluid">
     <div class="row-fluid">
-        <div class="span9">
-            <div class="widget-block">
-                <div class="widget-head">
-                    <h5>
-                        Applications Summary
-                    </h5>
+        <div class="span8">
+            <div class="box-tab">
+                <div class="page-header">
+                    <h1>
+                        &nbsp; &nbsp;Applications Summary
+                    </h1>
                 </div>
                 <div class="widget-content">
                     <div class="widget-box">
@@ -200,11 +200,7 @@
                     </div>
                 </div>
             </div>
-        </div>
-        @Html.Partial("CounsellorDetails")
-    </div>
-</div>
-<div class="widget-content" style="padding-left: 30%; padding-right: 30%; text-align: center">
+            <div class="widget-content" style="padding-left: 30%; padding-right: 30%; text-align: center">
     <div class="widget-box">
         <div class="alert alert-info fade in">
             <button data-dismiss="alert" class="close" type="button">
@@ -231,3 +227,11 @@
         </div>
     }
 </div>
+        </div>
+        <div class="span4">
+            @Html.Partial("CounsellorDetails")            
+            @Html.Partial("~/Views/Advertisement/Partial/_ScrollingMarketing.cshtml", (IEnumerable<StormWeb.Models.Advertisement>) ViewBag.Ads)
+        </div>
+    </div>
+</div>
+
