--- a/StormWeb/Views/University/Create.cshtml
+++ b/StormWeb/Views/University/Create.cshtml
@@ -67,6 +67,16 @@
                 </div>
             </div>
             <div class="control-group">
+                @Html.Label("Comission Rate", null, new { @class = "control-label form-required" })
+                <div class="controls">
+                    @Html.TextBoxFor(model => model.Comission_Rate, new { @class = "input-small text-tip", placeholder = "Rate (%)" })
+                    <p class="help-block">
+                        @Html.ValidationMessageFor(model => model.Comission_Rate)
+                        @Html.ValidationMessage("ComissionRateError")
+                    </p>
+                </div>
+            </div>
+            <div class="control-group">
                 <div class="controls">
                     <input type="submit" value="Create" class="btn btn-primary" />
                     @Html.Button_DeleteOrCancel("Cancel", "../../University")
